freenance/prod/ingress-freenance-prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: freenance-prod-ingress
  namespace: finance-prod
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - info.freenance.store
    - info.freenance.online
    - freenance.store
    - freenance.online
    secretName: freenance-prod-ingress
  rules:
  - host: freenance.store
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: finance-frontend-prod
            port:
              number: 80
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: django-app-service-prod
            port:
              number: 8000
  - host: freenance.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: finance-frontend-prod
            port:
              number: 80
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: django-app-service-prod
            port:
              number: 8000
  - host: info.freenance.store
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: info-freenance
            port:
              number: 80
  - host: info.freenance.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: info-freenance
            port:
              number: 80
